# mirrors-countme

./: .coveragerc  .flake8  .gitignore  .zuul.yaml  MAINTENANCE.md  MANIFEST.in  README.md  countme-csv2sqlite.sh  countme-delete-totals.py  countme-totals-sqlite.py  countme-totals.py  countme-trim-raw.py  countme-update-rawdb.sh  countme-update-totals.sh  daily-run.sh  mirrors-countme.spec  mypy.cfg  parse-access-log.py  parse-all-countme.sh  pyproject.toml  renovate.json  setup.cfg  sqlite2csv.sh  test_requirements.txt  tox.ini
.github/workflows/: main.yaml
ci/: tox.yaml
countme/: __init__.py  parse.py  progress.py  regex.py  totals.py  version.py
mirrors_countme/: __init__.py  constants.py  matchers.py  output_items.py  parse.py  progress.py  readers.py  regex.py  totals.py  util.py  version.py  writers.py
mirrors_countme/scripts/: countme_delete_totals.py  countme_parse_access_log.py  countme_totals.py  countme_trim_raw.py
scripts/: countme-csv2sqlite.sh  countme-fix-dbs.sh  countme-regenerate-dbs.sh  countme-rezip  countme-split-totals-db.sh  countme-update-rawdb.sh  countme-update-totals.sh  countme-weekly-totals-ui.sh
test_data/: countme_totals.tar.xz
tests/: common.py  conftest.py  test_init.py  test_integrate.py  test_matchers.py  test_output_items.py  test_parse.py  test_progress.py  test_readers.py  test_regex.py  test_script_countme_totals.py  test_totals.py  test_util.py  test_version.py  test_writers.py
tests/scripts/: test_countme_delete_totals.py  test_countme_parse_access_log.py  test_countme_totals.py  test_countme_trim_raw.py
