[tool.poetry]
name = "mirrors-countme"
version = "0.1.2"
description = "Parse access logs and count hosts for DNF mirrors"
authors = [
    "Will Woods",
    "Stephen Smoogen <smooge@smoogespace.com>",
    "Adam Saleh <asaleh@redhat.com>",
    "Patrik Polakovič <patrik@alphamail.org>",
    "Nils Philippsen <nils@redhat.com>",
    "James Antill <james@and.org>",
    "Lenka Segura <lsegura@redhat.com>",
    "Pedro Moura <pmoura@redhat.com>",
]
maintainers = [
    "Fedora Infrastructure <admin@fedoraproject.org>",
]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "http://github.com/fedora-infra/mirrors-countme"
packages = [
    { include = "mirrors_countme" },
]
include = [
    { path = "scripts/*.sh", format = "sdist" },
    { path = "tests", format = "sdist" },
]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
poetry = "^1.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
mypy = "^1.2.0"
hypothesis = "^6.72.4"
ruff = "^0.0.263 || ^0.0.264 || ^0.0.265 || ^0.0.269 || ^0.0.270 || ^0.0.272 || ^0.0.275 || ^0.0.276 || ^0.0.277 || ^0.0.278 || ^0.0.279 || ^0.0.280 || ^0.0.281 || ^0.0.282 || ^0.0.283 || ^0.0.284 || ^0.0.285 || ^0.0.286"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
countme-totals = "mirrors_countme.scripts.countme_totals:cli"
countme-trim-raw = "mirrors_countme.scripts.countme_trim_raw:cli"
countme-parse-access-log = "mirrors_countme.scripts.countme_parse_access_log:cli"
countme-delete-totals = "mirrors_countme.scripts.countme_delete_totals:cli"

[tool.pytest.ini_options]
addopts = "--cov-config .coveragerc --cov=mirrors_countme --cov-report term --cov-report xml --cov-report html"

[tool.black]
line_length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.ruff]
select = ["E", "F", "W", "I"]
line-length = 100
target-version = "py311"
allowed-confusables = ["’"]
