[metadata]
name = mirrors-countme
version = attr:countme.version.__version__
description = access_log parsing & host counting for DNF mirrors
url = https://github.com/fedora-infra/mirrors-countme
author = Will Woods
author_email = wwoods@redhat.com
license = GPLv3+
license_file = LICENSE.md
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.11
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Topic :: Internet :: Log Analysis

[options]
python_requires = >=3.5
packages = countme
scripts =
  parse-access-log.py
  countme-totals.py
  scripts/countme-update-rawdb.sh
  scripts/countme-update-totals.sh
  scripts/countme-csv2sqlite.sh
  scripts/countme-sqlite2csv.sh
  scripts/countme-fix-dbs.sh
  scripts/countme-weekly-totals-ui.sh

[options.extras_require]
# Not sure what the _minimum_ tqdm version is but this should be fine
fancy_progress = tqdm>=4.10.0

[tool:pytest]
addopts = --cov-config .coveragerc --cov=countme --cov-report term --cov-report xml --cov-report html
